# gemini

./: .gitignore  .pylintrc  Makefile  README.rst  pyproject.toml  tests.pylintrc
.github/workflows/: gemini-ci.yml  python-package.yml
gemini/: __init__.py  __main__.py  fmt.py
tests/: test_gemini.py  test_gemini_fmt.py  test_gemini_main.py
