[tool.poetry]
name = "gemini"
version = "0.1.0"
description = ""
authors = ["Yung-Jin (Joey) Hu <yungjinhu@gmail.com>"]

[tool.poetry.scripts]
gemini = "gemini.__main__:main"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
loguru = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
pylint = "^2.5.2"
isort = "^4.3.21"
pyfakefs = "^4.0.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
